--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,32 @@
 <resources>
     <string name="app_name">Space Stick</string>
+
+    <string name="scr_any_msg_ok">OK</string>
+    <string name="scr_any_msg_retry">Retry</string>
+    <string name="scr_any_msg_success">SUCCESS</string>
+    <string name="scr_any_msg_error_no_connection">No internet connection</string>
+    <string name="scr_any_msg_failed_connection">Failed connection</string>
+    <string name="scr_any_msg_something_went_wrong">Something went wrong</string>
+
+    <string name="scr_main_lbl_connecting">Connection…</string>
+    <string name="scr_main_lbl_connect">Connect</string>
+    <string name="scr_main_lbl_dialog_title">WARNING</string>
+    <string name="scr_main_lbl_dialog_location_permission">To correct work app need location permission</string>
+    <string name="scr_main_lbl_dialog_settings">Go to settings</string>
+    <string name="scr_main_lbl_dialog_cancel">Cancel</string>
+
+    <string name="scr_stick_lbl_model">Orion</string>
+    <string name="scr_stick_lbl_brightness">Brightness</string>
+    <string name="scr_stick_lbl_speed">Speed</string>
+
+    <string name="scr_settings_lbl_tab_title">Settings</string>
+    <string name="scr_settings_lbl_model">Model:</string>
+    <string name="scr_settings_lbl_battery_level">Battery level:</string>
+    <string name="scr_settings_lbl_wifi_name">Wifi name:</string>
+    <string name="scr_settings_lbl_pattern_selected">Pattern selected:</string>
+    <string name="scr_settings_lbl_advanced_settings">Advanced settings</string>
+    <string name="scr_settings_lbl_about_us">About us</string>
+    <string name="scr_settings_lbl_rate_us">Rate us</string>
+
+    <string name="scr_rgb_settings_lbl_tab_title">Pattern settings</string>
 </resources>
